# virtual_analyst

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  CONTEXT.md  CURSOR_PROMPT_ROUND10_FIXES.md  CURSOR_PROMPT_ROUND11_FIXES.md  CURSOR_PROMPT_ROUND3_FIXES.md  CURSOR_PROMPT_ROUND5_FIXES.md  Dockerfile  README.md  SYSTEM_FUNCTIONALITY_AND_USAGE.md  agent_state.json  docker-compose.test.yml  docker-compose.yml  pyproject.toml  render.yaml  vercel.json
.cursor/rules/: context-save.mdc
.github/workflows/: ci.yml  hosted-tests.yml  keepalive.yml
apps/excel-addin/: README.md  commands.html  manifest.xml  taskpane.html  taskpane.js
apps/web/: .env.example  middleware.ts  next-env.d.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
apps/worker/: __init__.py  celery_app.py  tasks.py
docs/: API_KEYS_SETUP.md  training-video-script.md
docs/plans/: 2026-02-24-afs-module-design.md  2026-02-24-dg-parity-design.md  2026-02-25-ce-africa-parity-design.md  2026-02-25-ce-africa-parity-impl.md  2026-02-25-deferred-review-fixes.md  2026-02-25-dg-parity-phase6-frontend-design.md  2026-02-25-dg-parity-phase6-frontend.md  2026-02-25-dg-parity-phase6-implementation.md  2026-02-26-afs-phase1-implementation.md  2026-02-26-agentic-excel-import-design.md  2026-02-26-agentic-excel-import.md  2026-02-26-deferred-review-fixes.md  2026-02-26-uiux-overhaul-design.md  2026-02-26-uiux-overhaul.md  2026-02-27-afs-phase2-ai-disclosure-drafter.md  2026-02-27-afs-phase3-review-tax.md  2026-02-27-afs-phase4-consolidation-output.md  2026-02-27-afs-phase5-analytics-benchmarking.md  2026-02-27-afs-phase6-custom-frameworks-rollforward.md  2026-02-27-user-manual-enhancement-design.md  2026-02-27-user-manual-implementation.md  2026-02-28-functional-test-suite-design.md  2026-02-28-functional-test-suite-implementation.md  2026-02-build-plan-round23.md  2026-03-02-functional-test-red-fixes-design.md  2026-03-02-functional-test-red-fixes-implementation.md  2026-03-08-pim-tech-stack-build-plan.md  2026-03-09-pim-v2-build-plan.md  2026-03-16-parallel-sprint-plan.md  2026-03-16-product-completion-plan.md  2026-03-16-product-completion-prompt.md  2026-03-17-state-review-and-build-plan.md  Portfolio_Intelligence_Module_Design_Spec.docx  VA_Master_Build_Plan.docx
docs/prompts/: CURSOR_PROMPTS_BACKLOG.md  CURSOR_PROMPT_CODE_REVIEW_FIXES.md  CURSOR_PROMPT_DG_PARITY_PHASE1.md  CURSOR_PROMPT_DG_PARITY_PHASE2.md  CURSOR_PROMPT_DG_PARITY_PHASE3.md  CURSOR_PROMPT_DG_PARITY_PHASE4.md  CURSOR_PROMPT_DG_PARITY_PHASE5.md  CURSOR_PROMPT_ROUND2_FIXES.md  CURSOR_PROMPT_ROUND4_FIXES.md  CURSOR_PROMPT_ROUND6_FIXES.md  CURSOR_PROMPT_ROUND7_FIXES.md
docs/requirements/: 2026-03-24-requirements-document.md  2026-03-25-requirements-document.md
docs/reviews/: 2026-03-04-comprehensive-platform-review.md
docs/specs/: CONTEXT_SAVE_2026-02-11.md  PIM_Requirements_BuildPlan_v2.docx
docs/user-manual/: 01-getting-started.md  02-dashboard.md  03-marketplace.md  04-data-import.md  05-excel-connections.md  06-afs-module.md  07-afs-review-and-tax.md  08-afs-consolidation-and-output.md  09-org-structures.md  10-baselines.md  11-drafts.md  12-scenarios.md  13-changesets.md  14-runs.md  15-monte-carlo-and-sensitivity.md  16-valuation.md  17-budgets.md  18-covenants.md  19-benchmarking.md  20-entity-comparison.md  21-ventures.md  22-workflows-and-tasks.md  23-board-packs.md  24-memos-and-documents.md  25-collaboration.md  26-settings-and-admin.md  README.md  appendix-a-glossary.md
finmodel spec pack v7/: PACK_README.md  VERIFICATION_CHECKLIST.md
scripts/: apply-migrations.sh  run-integration-tests.sh
scripts/functional-tests/: cleanup-test-data.sh  phase-1-getting-started.sh  phase-2-setup.sh  phase-3-configure.sh  phase-4-analyze.sh  phase-5-collaborate.sh  phase-6-admin.sh  run-all.sh  seed-test-data.sh
shared/fm_shared/: errors.py  logging.py  metrics.py
tests/: conftest.py
tests/e2e/: test_hosted_health.py
tests/golden/: debt_base_kpis.json  debt_base_statements.json  debt_config.json  manufacturing_base_kpis.json  manufacturing_base_statements.json  manufacturing_config.json  manufacturing_mc_p50.json  test_consolidation_dg_parity.py  (+6 more)
virtual_analyst_ci_pack/: README.md
(+758 files in other folders)
