[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-analyst"
version = "0.1.0"
description = "Deterministic financial modeling platform with LLM assistance"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "supabase>=2.3.0",
    "redis[hiredis]>=5.0.1",
    "celery>=5.3.4",
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "tenacity>=8.2.3",
    "slowapi>=0.1.9",
    "anthropic>=0.39.0",
    "openai>=1.55.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.9",
    "black>=23.12.1",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=apps --cov=shared --cov-report=html --cov-report=term"

[tool.setuptools]
packages = [
    "apps",
    "apps.api",
    "apps.api.app",
    "apps.api.app.core",
    "apps.api.app.data",
    "apps.api.app.middleware",
    "apps.api.app.routers",
    "apps.api.app.services",
    "apps.api.app.services.llm",
    "apps.worker",
    "shared",
    "shared.fm_shared",
]
